--- a/config/locales/models/property.yml
+++ b/config/locales/models/property.yml
@@ -37,4 +37,5 @@ pt-BR:
         reference_point: "Ponto de referência"
         address_link_visible: "Endereço visível"
         complement_link_visible: "Complemento visível"
+        special: "Destaque?"
 
