--- a/config/locales/models/customer.yml
+++ b/config/locales/models/customer.yml
@@ -19,3 +19,4 @@ pt-BR:
         celphone: "Celular"
         responsible_name: "Nome do responsável"
         responsible_telephone: "Telefone do responsável"
+        burgh: "Bairro"
