--- a/config/locales/models/property.yml
+++ b/config/locales/models/property.yml
@@ -10,9 +10,9 @@ pt-BR:
         name: "Nome do imóvel"
         description: "Descrição do imóvel"
         rooms: "Quartos/Salas"
-        unit: "Unidade"
+        unit: "Unidade/Loja"
         value: "Valor"
-        suit: "Suítes"
+        suit: "Suítes/Banheiros"
         value_m2: "Valor m²"
         area: "Área (m)"
         parking_spaces: "Garagens"
