--- a/config/locales/models/property.yml
+++ b/config/locales/models/property.yml
@@ -41,4 +41,5 @@ pt-BR:
         commercial_situation: "Estado"
         company_id: "Contrutoras/Vendedores"
         prediction: "Previsão de entrega"
+        project: "Empreendimento/Condomínio"
 
